# Heimdall-HomeUI

./: CMakeLists.txt  Main.qml  README.md  flash_update.sh  main.cpp  resources_file.qrc
config/: commonapi4someip.ini  vsomeip-linux-client.json
src/: HeimdallBackend.cpp  HeimdallBackend.hpp
src-gen/core/v1/Heimdall/: OTASystemManagement.hpp  OTASystemManagementProxy.hpp  OTASystemManagementProxyBase.hpp  OTASystemManagementStub.hpp  OTASystemManagementStubDefault.hpp
src-gen/someip/v1/Heimdall/: OTASystemManagementSomeIPCatalog.json  OTASystemManagementSomeIPDeployment.cpp  OTASystemManagementSomeIPDeployment.hpp  OTASystemManagementSomeIPProxy.cpp  OTASystemManagementSomeIPProxy.hpp  OTASystemManagementSomeIPStubAdapter.cpp  OTASystemManagementSomeIPStubAdapter.hpp
